ci: build Android arm64 on branch and publish prerelease assets

--- a/.github/workflows/android-arm64.yml
+++ b/.github/workflows/android-arm64.yml
@@ -1,9 +1,10 @@
 name: android-arm64-build
 
 on:
+  push:
+    branches:
+      - fork-main-snapshot
   workflow_dispatch:
-  release:
-    types: [published]
 
 permissions:
   contents: write
@@ -27,13 +28,23 @@ jobs:
         run: |
           go build -o CLIProxyAPI ./cmd/server
           tar -czf CLIProxyAPI-android-arm64.tar.gz CLIProxyAPI
-      - name: Upload workflow artifact
+          zip -q CLIProxyAPI-android-arm64.zip CLIProxyAPI
+      - name: Upload workflow artifacts
         uses: actions/upload-artifact@v4
         with:
           name: CLIProxyAPI-android-arm64
-          path: CLIProxyAPI-android-arm64.tar.gz
-      - name: Upload release asset
-        if: github.event_name == 'release'
+          path: |
+            CLIProxyAPI-android-arm64.tar.gz
+            CLIProxyAPI-android-arm64.zip
+      - name: Create prerelease with Android artifacts
+        if: github.ref_name == 'fork-main-snapshot'
         uses: softprops/action-gh-release@v2
         with:
-          files: CLIProxyAPI-android-arm64.tar.gz
+          tag_name: android-arm64-${{ github.sha }}
+          name: Android arm64 build ${{ github.sha }}
+          target_commitish: ${{ github.sha }}
+          prerelease: true
+          generate_release_notes: true
+          files: |
+            CLIProxyAPI-android-arm64.tar.gz
+            CLIProxyAPI-android-arm64.zip
